[gd_scene load_steps=20 format=3 uid="uid://dw3tfc5vskup3"]

[ext_resource type="Script" path="res://scenes/enemies/LuxBoss.gd" id="1_4fk7r"]
[ext_resource type="PackedScene" uid="uid://cgpas5hbenrwf" path="res://scenes/enemies/LuxRocket.tscn" id="2_nt175"]
[ext_resource type="Texture2D" uid="uid://ceb52tng3vx82" path="res://assets_image/Characters/Lux/Lux-Sheet.png" id="2_qqbwu"]
[ext_resource type="Texture2D" uid="uid://dthqd5hqlryu5" path="res://assets_image/Objects/grappling_point.png" id="3_hgnqr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo267"]
size = Vector2(32, 36.6667)

[sub_resource type="Animation" id="Animation_8h6jy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [110]
}

[sub_resource type="Animation" id="Animation_2dv51"]
resource_name = "die"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -53)]
}

[sub_resource type="Animation" id="Animation_mrq4y"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_mm064"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [110, 111, 112, 113, 114]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_dhsv0"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_5p7j1"]
resource_name = "melee"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_fefb2"]
resource_name = "rocket"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_tfot1"]
resource_name = "shield"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [70, 71]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="Animation" id="Animation_1jgcp"]
resource_name = "slam"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -53.3333), Vector2(0, -30)]
}

[sub_resource type="Animation" id="Animation_ohtry"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103, 104, 105, 106, 107]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -53.3333)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wn6vj"]
_data = {
"RESET": SubResource("Animation_8h6jy"),
"die": SubResource("Animation_2dv51"),
"hurt": SubResource("Animation_mrq4y"),
"idle": SubResource("Animation_mm064"),
"jump": SubResource("Animation_dhsv0"),
"melee": SubResource("Animation_5p7j1"),
"rocket": SubResource("Animation_fefb2"),
"shield": SubResource("Animation_tfot1"),
"slam": SubResource("Animation_1jgcp"),
"walk": SubResource("Animation_ohtry")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljdqk"]
size = Vector2(80, 57.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7b8b"]
size = Vector2(64, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_4pq4r"]
radius = 222.233

[node name="LuxEnemy" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.7, 0.7)
collision_layer = 4
collision_mask = 14
script = ExtResource("1_4fk7r")
boss_rocket_scene = ExtResource("2_nt175")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.33332)
shape = SubResource("RectangleShape2D_mo267")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -53.3333)
texture = ExtResource("2_qqbwu")
hframes = 10
vframes = 14
frame = 110

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wn6vj")
}

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -19.25)
shape = SubResource("RectangleShape2D_ljdqk")

[node name="MeleeHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_a7b8b")

[node name="RangeChase" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeChase"]
position = Vector2(5.71429, -17.1429)
shape = SubResource("CircleShape2D_4pq4r")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, -16)
texture = ExtResource("3_hgnqr")

[node name="ShieldParticles" type="CPUParticles2D" parent="."]
emitting = false

[node name="EdgeRayLeft" type="RayCast2D" parent="."]
position = Vector2(-16, 8)

[node name="EdgeRayRight" type="RayCast2D" parent="."]
position = Vector2(16, 8)

[node name="JumpRay" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(32, -40)

[node name="RocketSpawn" type="Marker2D" parent="."]
position = Vector2(37.143, -35.714)

[node name="RocketPatternTimer" type="Timer" parent="."]

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="MeleeHitbox" to="." method="_on_deal_attack_area_area_entered"]
[connection signal="area_exited" from="MeleeHitbox" to="." method="_on_deal_attack_area_area_exited"]
[connection signal="body_entered" from="RangeChase" to="." method="_on_range_chase_body_entered"]
[connection signal="body_exited" from="RangeChase" to="." method="_on_range_chase_body_exited"]
